some changes css

--- a/src/index.html
+++ b/src/index.html
@@ -39,22 +39,22 @@
                     <div class="card">
                         <form name="locationControls">
                             <div class="card-content">
-                                <span class="card-title">Card Title</span>
+                                <span class="card-title">Поиск билетов</span>
                                 <div class="input-field">
                                     <input type="text" id="autocomplete-origin" class="autocomplete">
-                                    <label for="autocomplete-origin">Origin</label>
+                                    <label for="autocomplete-origin">Откуда</label>
                                 </div>
                                 <div class="input-field">
                                     <input type="text" id="autocomplete-destination" class="autocomplete">
-                                    <label for="autocomplete-destination">Destination</label>
+                                    <label for="autocomplete-destination">Куда</label>
                                 </div>
                                 <div class="input-field">
                                     <input type="text" class="datepicker" id="datepicker-depart">
-                                    <label for="datepicker-depart">Depart date</label>
+                                    <label for="datepicker-depart">Дата вылета</label>
                                 </div>
                                 <div class="input-field">
                                     <input type="text" class="datepicker" id="datepicker-return">
-                                    <label for="datepicker-return">Return date</label>
+                                    <label for="datepicker-return">Обратный билет</label>
                                 </div>
                             </div>
                             <div class="card-action d-flex">
