some changes css

--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <title>Document</title>
   </head>
   <body>
-    <nav class="header purple darken-4">
+    <nav class="header deep-purple darken-2">
         <div class="nav-wrapper">
             <div class="container d-flex align-items-center">
                 <div class="logo d-flex align-items-center">
@@ -59,15 +59,15 @@
                             </div>
                             <div class="card-action d-flex">
                                 <button 
-                                    class="btn waves-effect waves-light purple darken-3" 
+                                    class="btn waves-effect waves-light deep-purple darken-2" 
                                     type="submit" 
-                                    name="action">Search
+                                    name="action">Поиск
                                     <i class="material-icons right">send</i>
                                 </button>
                                 <button 
                                     class="btn waves-effect waves-light pink darken-3 ml-auto" 
                                     type="reset" 
-                                    name="action">Reset
+                                    name="action">Сброс
                                     <i class="material-icons right">cancel</i>
                                 </button>
                             </div>
